<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ahmedSo.weather.ui.main.home.HomeFragment"
        android:label="@string/home_fragment_title"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/homeFragment_to_searchFragment"
            app:destination="@id/nav_search" />

        <action
            android:id="@+id/homeFragment_to_currentWeatherFragment"
            app:destination="@id/nav_current_weather" />
    </fragment>

    <fragment
        android:id="@+id/nav_search"
        android:name="com.ahmedSo.weather.ui.main.search.SearchFragment"
        android:label="@string/search_fragment_title"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_current_weather"
        android:name="com.ahmedSo.weather.ui.main.currentWeather.CurrentWeatherFragment"
        android:label="@string/current_weather_fragment_title"
        tools:layout="@layout/fragment_current_weather" />
</navigation>