<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.ahmedSo.weather.ui.main.search.SearchViewModel" />

        <variable
            name="handlers"
            type="com.ahmedSo.weather.ui.main.search.SearchHandlers" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.search.SearchFragment">

        <TextView
            android:id="@+id/tv_search_user_guid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/search_fragment_user_guid"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_search_cities"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/search_fragment_search_editText_hint"
            android:text="@={viewModel.citiesNames}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_search_user_guid"
            app:layout_constraintWidth_percent="0.7" />

        <Button
            android:id="@+id/btn_home_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:onClick="@{() -> handlers.search()}"
            android:text="@string/search_fragment_search_button_text"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_search_cities"
            app:layout_constraintWidth_percent="0.4" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_search_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_home_search"
            tools:listitem="@layout/item_recycler_search_city" />

        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:visibility="@{viewModel.showProgress ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>